<resources>
    <string name="app_name">Elbazar</string>
    <string name="facebook_app_id">255961605821563</string>
    <string name="fb_login_protocol_scheme">fb255961605821563</string>

    <string name="openNavDrawer">Navigation Drawer Open</string>
    <string name="closeNavDrawer">Navigation Drawer Close</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="help">Help</string>
    <string name="m_web">www.imranalam.in</string>
    <string name="m_mail">info@imranalam.in</string>
    <string name="home_fragment">Home Fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu1">Vous pouvez pour en tout securité</string>
    <string name="garantis">Au lieu de payer pour l’utilisation de Facebook et des autres produits et services que nous offrons, en utilisant les Produits Facebook inclus dans les présentes Conditions, vous acceptez que nous vous montrions les publicités payées par les entreprises et organisations pour que nous les promouvions sur les Produits des entités Facebook et en dehors. Nous utilisons vos données personnelles, telles que les informations concernant votre activité et vos intérêts, afin de vous montrer des publicités plus pertinentes pour vous. La protection de la vie privée est au cœur de la conception de notre système publicitaire. Cela signifie que nous pouvons vous montrer des publicités pertinentes et utiles sans informer les annonceurs sur votre identité. Nous ne vendons pas vos données personnelles. Nous autorisons les annonceurs à nous donner des informations, telles que leur objectif commercial et le type d’audience à qui ils souhaitent montrer leurs publicités (par exemple, les personnes âgées de 18 à 35 ans qui aiment le vélo). Puis, nous montrons leur publicité aux personnes susceptibles d’être intéressées. De plus, nous envoyons aux annonceurs des rapports sur les performances de leurs publicités pour les aider à comprendre comment les gens interagissent avec leur contenu sur Facebook et en dehors. Par exemple, nous communiquerons aux annonceurs des informations générales concernant la démographie et les centres d’intérêt (par exemple, une publicité a été vue par une femme entre 25 et 34 ans qui vit à Madrid et qui aime l’informatique) pour les aider à mieux comprendre leur audience. Nous ne partageons aucune information qui vous identifie directement (des informations comme votre nom ou adresse e-mail qui, en elles-mêmes, peuvent servir à vous contacter ou à vous identifier) sans avoir obtenu votre autorisation spécifique. Découvrez comment fonctionnent les publicités Facebook ici. Nous collectons et utilisons vos données personnelles afin de vous fournir les services décrits ci-dessus. Pour en savoir plus sur la façon dont nous collectons et utilisons vos données, consultez notre Politique d’utilisation des données. Vous pouvez contrôler les types de publicités et d’annonceurs que vous voyez ainsi que les types d’informations que nous utilisons pour définir les publicités que nous vous montrons. En savoir plus.</string>
    <string name="statut1">Avec le statut Gold, vous bénéficiez des livraisons gratuites.</string>
    <string name="statut11">Un paiement de votre commande à la livraison , Vous recevrez alors votre commande à votre domicile et vous payez à la livraison, en espèces, par chèque ou par Carte bancaire, directement à notre chauffeur habilité à réceptionner votre règlement.</string>
    <string name="paiement">Un paiement de votre commande à la livraison</string>
    <string name="paiement11">Vous recevrez alors votre commande à votre domicile et vous payez à la livraison, en espèces, par chèque ou par Carte bancaire, directement à notre chauffeur habilité à réceptionner votre règlement.</string>
    <string name="benidice">Vous bénéficiez de frais de livraison réduits pour chacune de vos commandes, pour que la réception de vos courses s’effectue dans les meilleures conditions, nous apportons un soin particulier à la préparation de vos commandes livrées directement chez vous par nos chauffeurs dans un délai optimisé grâce à un parc de véhicules dédiés, sans intermédiaire.</string>
    <string name="paiement12">Vous recevrez alors votre commande à votre domicile et vous payez à la livraison, en espèces, par chèque ou par Carte bancaire, directement à notre chauffeur habilité à réceptionner votre règlement.</string>
    <string name="silver">Vous bénéficiez de frais de livraison réduits pour chacune de vos commandes, pour que la réception de vos courses s’effectue dans les meilleures conditions, nous apportons un soin particulier à la préparation de vos commandes livrées directement chez vous par nos chauffeurs dans un délai optimisé grâce à un parc de véhicules dédiés, sans intermédiaire.</string>
    <string name="silver12">Vous recevrez alors votre commande à votre domicile et vous payez à la livraison, en espèces, par chèque ou par Carte bancaire, directement à notre chauffeur habilité à réceptionner votre règlement.</string>

    <string-array name="numbers">
        <item>Espéce</item>
        <item>Cheque</item>
        <item>Carte bancaire</item>

    </string-array>

</resources>